--- a/config.yaml
+++ b/config.yaml
@@ -100,3 +100,11 @@ params:
       social:
         github: smola
         twitter: mola_io
+    abeaumont:
+      name: Alfredo Beaumont
+      thumbnail: https://avatars3.githubusercontent.com/u/80059?v=3&s=400
+      bio: Trying to build a comprehensive yet tractable universal AST for programming languages
+      social:
+        github: abeaumont
+        twitter: abeaumont
+
